# math

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
docs/: aabb_8hpp.html  aabb_8hpp.js  angles_8hpp.html  annotated.html  annotated_dup.js  brdf_8hpp.html  bvh_8hpp.html  bvh_8hpp.js  classes.html  classmath_1_1PackedVector-members.html  classmath_1_1PackedVector.html  classmath_1_1PackedVector.js  classmath_1_1_packed_vector-members.html  classmath_1_1_packed_vector.html  classmath_1_1_packed_vector.js  color-space_8hpp.html  color_8hpp.html  color_8hpp.js  common_8hpp.html  dir_2d8804b67265d6a5c14c77111ab189d3.html  dir_2d8804b67265d6a5c14c77111ab189d3.js  dir_38a288074a3050a7826d34b6a5bd7d48.html  dir_38a288074a3050a7826d34b6a5bd7d48.js  dir_61efc3ca6933b02b951778ad7f15e87f.html  dir_61efc3ca6933b02b951778ad7f15e87f.js  dir_c1427bb343a2cf7a7160156bc3b5ef39.html  dir_c1427bb343a2cf7a7160156bc3b5ef39.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e97a22db820454bf23bbe097b6c17840.html  dir_e97a22db820454bf23bbe097b6c17840.js  dir_fba38f648377aa56ae5d69782adf9e53.html  dir_fba38f648377aa56ae5d69782adf9e53.js  doxygen.css  doxygen_crawl.html  files.html  frustum_8hpp.html  frustum_8hpp.js  functions.html  functions_b.html  functions_c.html  (+272 more)
include/math/: aabb.hpp  angles.hpp  brdf.hpp  bvh.hpp  color-space.hpp  color.hpp  common.hpp  cone-tracing.hpp  flags.hpp  frustum.hpp  hex.hpp  ibl.hpp  line.hpp  matrix.hpp  metric.hpp  normal-mapping.hpp  packed-vector.hpp  pbr-colors.hpp  plane.hpp  quaternion.hpp  random.hpp  ray.hpp  sh.hpp  sphere.hpp  tone-mapping.hpp  triangle.hpp  types.hpp  vector.hpp  version.hpp
include/math/matrix/: float.hpp  projection.hpp  transform.hpp
include/math/simd/: quaternion.hpp  types.hpp
include/math/simd/matrix/: float.hpp  transform.hpp
include/math/simd/vector/: float.hpp  half.hpp  int.hpp  uint.hpp
include/math/vector/: float.hpp  int.hpp  uint.hpp
source/: aabb.cpp  bvh.cpp  color.cpp  matrix.cpp  plane.cpp  quaternion.cpp  ray.cpp  sphere.cpp  vector.cpp
tests/: test-containers.cpp  test-matrix.cpp  test-quaternion.cpp  test-vector.cpp
